Audit e standardizzazione integrità JavaScript su tutte le pagine (Protocollo V3.1)

--- a/Frontend/public/aggiungi_nuova_azienda.html
+++ b/Frontend/public/aggiungi_nuova_azienda.html
@@ -692,6 +692,7 @@
     </div>
 
     <!-- Scripts -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script src="assets/js/aggiungi_azienda.js?v=3.1" type="module"></script>
 </body>
 
