--- a/Frontend/public/archivio_account.html
+++ b/Frontend/public/archivio_account.html
@@ -120,6 +120,7 @@
     </div>
 
     <!-- Scripts -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script type="module" src="assets/js/archivio_account.js?v=3.1"></script>
 </body>
 
