--- a/Frontend/public/configurazione_documenti.html
+++ b/Frontend/public/configurazione_documenti.html
@@ -183,6 +183,7 @@
     </div>
 
     <!-- Scripts -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script src="assets/js/configurazione_documenti.js?v=3.1" type="module"></script>
 </body>
 
