--- a/Frontend/public/dati_azienda.html
+++ b/Frontend/public/dati_azienda.html
@@ -370,7 +370,7 @@
         <div class="spacer-footer"></div>
         <footer id="footer-placeholder" class="titanium-footer"></footer>
 
-        <script src="assets/js/main.js?v=3.1"></script>
+        <script type="module" src="assets/js/main.js?v=3.1"></script>
         <script type="module" src="assets/js/dati_azienda.js?v=3.1"></script>
     </div>
 </body>
