--- a/Frontend/public/gestione_allegati.html
+++ b/Frontend/public/gestione_allegati.html
@@ -181,6 +181,7 @@
         accept=".pdf,.jpg,.jpeg,.png,.doc,.docx,image/*">
 
     <!-- Scripts -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script type="module" src="assets/js/gestione_allegati.js?v=3.1"></script>
 
     <!-- TOAST NOTIFICATION -->
