--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -109,6 +109,7 @@
     </div>
 
     <!-- Scripts (In fondo per performance) -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script type="module" src="assets/js/login.js?v=3.1"></script>
 
 </body>
