--- a/Frontend/public/lista_aziende.html
+++ b/Frontend/public/lista_aziende.html
@@ -63,7 +63,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/main.js?v=3.1"></script>
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script type="module" src="assets/js/lista_aziende.js?v=3.1"></script>
 </body>
 
