--- a/Frontend/public/modifica_scadenza.html
+++ b/Frontend/public/modifica_scadenza.html
@@ -20,7 +20,7 @@
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
     <script src="assets/js/titanium-core.js?v=3.1"></script>
-    <script src="assets/js/ui-core.js?v=3.1"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 
     <style>
         .filled {
@@ -212,7 +212,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/main.js?v=3.1"></script>
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script type="module" src="assets/js/modifica_scadenza.js?v=3.1"></script>
 </body>
 
