--- a/Frontend/public/notifiche_storia.html
+++ b/Frontend/public/notifiche_storia.html
@@ -92,6 +92,7 @@
         <footer id="footer-placeholder" class="titanium-footer"></footer>
     </div>
     <!-- Scripts -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script type="module" src="assets/js/notifiche_storia.js?v=3.1"></script>
 </body>
 
