--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -19,8 +19,7 @@
         rel="stylesheet" />
 
     <!-- TITANIUM CORE & ACCESS SYSTEM (Protocollo V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/accesso.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/Protocollo.css">
 
     <!-- Core UI & Engine (Protocollo V3.1) -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
@@ -130,6 +129,7 @@
     </div>
 
     <!-- Scripts -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script type="module" src="assets/js/registrati.js?v=3.1"></script>
 
 </body>
