--- a/Frontend/public/regole_scadenze.html
+++ b/Frontend/public/regole_scadenze.html
@@ -117,6 +117,8 @@
         <!-- FOOTER PREMIUM -->
         <footer id="footer-placeholder" class="titanium-footer"></footer>
     </div>
+    <!-- Scripts -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <!-- Script di traduzione rapido -->
     <script type="module">
         import { t } from './assets/js/translations.js';
