--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -98,6 +98,7 @@
     </div>
 
     <!-- Scripts -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script type="module" src="assets/js/reset_password.js?v=3.1"></script>
 
 </body>
