--- a/Frontend/public/aggiungi_account_azienda.html
+++ b/Frontend/public/aggiungi_account_azienda.html
@@ -274,7 +274,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/main.js?v=3.1"></script>
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script type="module" src="assets/js/aggiungi_account_azienda.js?v=3.1"></script>
 </body>
 
