--- a/Frontend/public/configurazione_automezzi.html
+++ b/Frontend/public/configurazione_automezzi.html
@@ -173,6 +173,7 @@
     </div>
 
     <!-- Scripts -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script src="assets/js/configurazione_automezzi.js?v=3.1" type="module"></script>
 </body>
 
