--- a/Frontend/public/configurazione_generali.html
+++ b/Frontend/public/configurazione_generali.html
@@ -147,6 +147,7 @@
     </div>
 
     <!-- Scripts -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script src="assets/js/configurazione_generali.js?v=3.1" type="module"></script>
 </body>
 
