--- a/Frontend/public/modifica_account_azienda.html
+++ b/Frontend/public/modifica_account_azienda.html
@@ -397,7 +397,7 @@
     </div>
 
     <!-- Script -->
-    <script src="assets/js/main.js?v=3.1"></script>
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script type="module" src="assets/js/modifica_account_azienda.js?v=3.1"></script>
 </body>
 
