--- a/Frontend/public/modifica_azienda.html
+++ b/Frontend/public/modifica_azienda.html
@@ -878,6 +878,7 @@
         }
     </script>
 
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script src="assets/js/modifica_azienda.js?v=3.1" type="module"></script>
 </body>
 
