--- a/Frontend/public/scadenze.html
+++ b/Frontend/public/scadenze.html
@@ -122,6 +122,7 @@
     </div>
 
     <!-- Scripts -->
+    <script type="module" src="assets/js/main.js?v=3.1"></script>
     <script src="assets/js/scadenze.js?v=3.1" type="module"></script>
 </body>
 
