--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -24,7 +24,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
 
     <!-- Design System Master (Titanium Matrix V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo.css">
+    <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
