--- a/Frontend/public/aggiungi_nuova_azienda.html
+++ b/Frontend/public/aggiungi_nuova_azienda.html
@@ -16,8 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System Master (Titanium Protocol V3.1) -->
-    <link rel="stylesheet" href="assets/css/comune.css?v=3.1">
-    <link rel="stylesheet" href="assets/css/account.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
