--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -17,7 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- CSS Standard & Page Specific (Protocollo V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo.css">
+    <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
 
     <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 
