--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -19,7 +19,7 @@
         rel="stylesheet" />
 
     <!-- TITANIUM CORE & ACCESS SYSTEM (Protocollo V3.1) -->
-    <link rel="stylesheet" href="assets/css/Protocollo.css">
+    <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
 
     <!-- Core UI & Engine (Protocollo V3.1) -->
     <script src="assets/js/titanium-config.js?v=3.1"></script>
