--- a/Frontend/public/area_privata.html
+++ b/Frontend/public/area_privata.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Area Privata - Protocollo Titanium</title>
 
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
 
     <!-- Core Engine -->
-    <script src="assets/js/titanium-config.js?v=3.1"></script>
-    <script src="assets/js/titanium-core.js?v=3.1"></script>
+
+    <script src="assets/js/core.js?v=3.1"></script>
     <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 
 </head>
@@ -201,7 +201,7 @@
 
     <!-- SCRIPTS MODULARI -->
     <script type="module" src="assets/js/main.js?v=3.1"></script>
-    <script type="module" src="assets/js/area_privata_titanium.js?v=3.1"></script>
+    <script type="module" src="assets/js/area_privata.js?v=3.1"></script>
 </body>
 
 </html>
