--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
 
     <!-- Core Engine -->
-    <script src="assets/js/titanium-config.js?v=3.1"></script>
-    <script src="assets/js/titanium-core.js?v=3.1"></script>
+
+    <script src="assets/js/core.js?v=3.1"></script>
     <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script> <!-- CDN Fix -->
 </head>
@@ -53,7 +53,7 @@
         </header>
         <div class="spacer-header"></div>
 
-        <main class="settings-container no-select">
+        <main class="titanium-main settings-container no-select">
 
             <!-- SEZIONE PROFILO -->
             <div class="titanium-vault border-glow profile-card">
