--- a/Frontend/public/profilo_privato.html
+++ b/Frontend/public/profilo_privato.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
 
     <!-- Core Engine -->
-    <script src="assets/js/titanium-config.js?v=3.1"></script>
-    <script src="assets/js/titanium-core.js?v=3.1"></script>
+
+    <script src="assets/js/core.js?v=3.1"></script>
     <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 </head>
 
@@ -59,7 +59,7 @@
         </header>
         <div class="spacer-header"></div>
 
-        <main class="settings-container no-select">
+        <main class="titanium-main settings-container no-select">
 
             <!-- PANE: GUIDA RAPIDA (Regola 3.4) -->
             <div id="guida-pane" class="accordion-content">
