--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Protocollo V3.1: Supporto Dual Theme -->
     <meta name="color-scheme" content="light dark">
     <meta name="theme-color" content="#0a0f1e">
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="assets/css/Protocollo.css?v=3.1">
 
     <!-- Core Engine -->
-    <script src="assets/js/titanium-config.js?v=3.1"></script>
-    <script src="assets/js/titanium-core.js?v=3.1"></script>
+
+    <script src="assets/js/core.js?v=3.1"></script>
     <!-- UI Core: Gestione Header/Footer/Modal -->
     <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 </head>
