--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -24,13 +24,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script> <!-- CDN Fix -->
 </head>
 
-<body class="titanium-bg">
-    <div class="titanium-container">
+<body class="base-bg">
+    <div class="base-container">
         <!-- Faro Estetico -->
-        <div class="titanium-glow"></div>
+        <div class="base-glow"></div>
 
         <!-- HEADER FISSO -->
-        <header class="titanium-header">
+        <header class="base-header">
             <div class="header-balanced-container">
                 <div class="header-left">
                     <a href="home_page.html" class="btn-icon-header">
@@ -40,7 +40,7 @@
 
                 <div class="header-center">
                     <h1 class="header-title" data-t="settings_title">
-                        IMPOSTAZIONI
+                        Impostazioni
                     </h1>
                 </div>
 
@@ -53,10 +53,10 @@
         </header>
         <div class="spacer-header"></div>
 
-        <main class="titanium-main settings-container no-select">
+        <main class="base-main settings-container no-select">
 
             <!-- SEZIONE PROFILO -->
-            <div class="titanium-vault border-glow profile-card">
+            <div class="base-card border-glow profile-card">
                 <!-- Wrapper Orizzontale Avatar + QR -->
                 <div class="profile-header-top">
 
@@ -344,7 +344,7 @@
 
             <div class="spacer-footer"></div>
             <!-- FOOTER PREMIUM -->
-            <footer id="footer-placeholder" class="titanium-footer"></footer>
+            <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
     <!-- Scripts -->
