--- a/Frontend/public/profilo_privato.html
+++ b/Frontend/public/profilo_privato.html
@@ -23,14 +23,14 @@
     <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 </head>
 
-<body class="titanium-bg">
-    <div class="titanium-container">
+<body class="base-bg">
+    <div class="base-container">
         <!-- Faro Estetico -->
-        <div class="titanium-glow"></div>
+        <div class="base-glow"></div>
 
         <!-- HEADER -->
         <!-- HEADER FISSO -->
-        <header class="titanium-header">
+        <header class="base-header">
             <div class="header-balanced-container">
                 <!-- ZONA SINISTRA: Navigazione (1 icona) -->
                 <div class="header-left">
@@ -42,7 +42,7 @@
                 <!-- ZONA CENTRO: Titolo con Wrap Intelligente -->
                 <div class="header-center">
                     <h1 class="header-title" data-t="page_title_profile">
-                        PROFILO UTENTE
+                        Profilo Utente
                     </h1>
                 </div>
 
@@ -59,7 +59,7 @@
         </header>
         <div class="spacer-header"></div>
 
-        <main class="titanium-main settings-container no-select">
+        <main class="base-main settings-container no-select">
 
             <!-- PANE: GUIDA RAPIDA (Regola 3.4) -->
             <div id="guida-pane" class="accordion-content">
@@ -97,7 +97,7 @@
                             </div>
                         </div>
 
-                        <button type="button" class="titanium-btn-primary w-full accordion-header mt-6 p-small text-xs"
+                        <button type="button" class="base-btn-primary w-full accordion-header mt-6 p-small text-xs"
                             data-target="guida-pane">
                             HO CAPITO, CHIUDI GUIDA
                         </button>
@@ -268,7 +268,7 @@
                             <span class="material-symbols-outlined icon-18">edit</span>
                         </button>
                     </div>
-                    <div class="titanium-vault vault-card-sub">
+                    <div class="base-card vault-card-sub">
                         <div id="note-view" class="text-sm lh-relaxed text-primary text-pre">
                             -</div>
                     </div>
@@ -282,7 +282,7 @@
 
         <div class="spacer-footer"></div>
         <!-- FOOTER PREMIUM -->
-        <footer id="footer-placeholder" class="titanium-footer"></footer>
+        <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
     <!-- Scripts -->
