Fix Finale Home Page: Implementazione Avatar IMG Tag, Fix CSS Foto, Pulizia Spacer e Test Card

--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -27,7 +27,8 @@
         <div class="header-left">
           <a href="profilo_privato.html" class="avatar-header-link">
             <div id="header-user-avatar" class="header-avatar-box">
-              <span class="material-symbols-outlined header-avatar-icon">person</span>
+              <img id="user-avatar-img" src="assets/images/user-avatar.png" alt="Avatar Utente"
+                onerror="this.src='data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0iI2ZmZiI+PHBhdGggZD0iTTEyIDEyYzIuMjEgMCA0LTEuNzkgNC00czLTEuNzktNC00LTRzLTQgMS43OS00IDQgMS43OSA0IDQgNHptMCAyYy0yLjY3IDAtOCAxLjM0LTggNHYyaDE2di0yYy04LTIuNjYtOC00LTh6Ii8+PC9zdmc+'">
             </div>
           </a>
 
@@ -49,7 +50,7 @@
       </div>
     </header>
 
-    <div class="spacer-header" style="height: 96px;"></div>
+    <div class="spacer-header"></div>
 
     <!-- MAIN -->
     <main class="base-main">
@@ -68,6 +69,7 @@
             <p>Gestione Risorse</p>
           </div>
         </a>
+
         <a href="#" class="matrix-card card-orange">
           <div class="matrix-icon-box">📅</div>
           <div class="card-text-block">
@@ -85,7 +87,7 @@
       </div>
     </main>
 
-    <div class="spacer-footer" style="height: 96px;"></div>
+    <div class="spacer-footer"></div>
 
     <!-- FOOTER -->
     <footer class="base-footer">
