UI Polish: Removed tap highlight squares on clickable elements and extended profile link to user name/greeting

--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -32,10 +32,14 @@
             </div>
           </a>
 
-          <div class="flex flex-col justify-center">
-            <span id="home-greeting-text" class="header-greeting-text">...</span>
-            <h1 id="home-user-name" class="header-title">Home Page</h1>
-          </div>
+          <!-- Testo Cliccabile -->
+          <a href="profilo_privato.html"
+            style="text-decoration: none; color: inherit; -webkit-tap-highlight-color: transparent;">
+            <div class="flex flex-col justify-center">
+              <span id="home-greeting-text" class="header-greeting-text">...</span>
+              <h1 id="home-user-name" class="header-title">Home Page</h1>
+            </div>
+          </a>
         </div>
 
         <!-- Center: Vuoto -->
