Refactoring CSS: Protocollo.1.css consolidation with Base and Home Page sections, moved utilities, and integrated card gradients.

--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -59,14 +59,14 @@
     <!-- MAIN -->
     <main class="base-main">
       <div class="matrix-grid">
-        <a href="#" class="matrix-card card-blue">
+        <a href="#" class="matrix-card card-blue area-privato">
           <div class="matrix-icon-box">🔒</div>
           <div class="card-text-block">
             <h3>Privato</h3>
             <p>Cassaforte Personale</p>
           </div>
         </a>
-        <a href="#" class="matrix-card card-green">
+        <a href="#" class="matrix-card card-green area-azienda">
           <div class="matrix-icon-box">🏢</div>
           <div class="card-text-block">
             <h3>Azienda</h3>
@@ -74,14 +74,14 @@
           </div>
         </a>
 
-        <a href="#" class="matrix-card card-orange">
+        <a href="#" class="matrix-card card-orange area-scadenze">
           <div class="matrix-icon-box">📅</div>
           <div class="card-text-block">
             <h3>Scadenze</h3>
             <p>Controlla i prossimi impegni</p>
           </div>
         </a>
-        <a href="#" class="matrix-card card-red">
+        <a href="#" class="matrix-card card-red area-urgenze">
           <div class="matrix-icon-box">⚠️</div>
           <div class="card-text-block">
             <h3>Urgenze</h3>
