Aggiornamento Estetico Home Page: Applicazione border-glow, adaptive-shadow, icone Material e ottimizzazione gradienti brillanti.

--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -59,30 +59,30 @@
     <!-- MAIN -->
     <main class="base-main">
       <div class="matrix-grid">
-        <a href="#" class="matrix-card card-blue area-privato">
-          <div class="matrix-icon-box">🔒</div>
+        <a href="#" class="matrix-card card-blue border-glow adaptive-shadow area-privato">
+          <div class="matrix-icon-box"><span class="material-symbols-outlined">lock</span></div>
           <div class="card-text-block">
             <h3>Privato</h3>
             <p>Cassaforte Personale</p>
           </div>
         </a>
-        <a href="#" class="matrix-card card-green area-azienda">
-          <div class="matrix-icon-box">🏢</div>
+        <a href="#" class="matrix-card card-green border-glow adaptive-shadow area-azienda">
+          <div class="matrix-icon-box"><span class="material-symbols-outlined">apartment</span></div>
           <div class="card-text-block">
             <h3>Azienda</h3>
             <p>Gestione Risorse</p>
           </div>
         </a>
 
-        <a href="#" class="matrix-card card-orange area-scadenze">
-          <div class="matrix-icon-box">📅</div>
+        <a href="#" class="matrix-card card-orange border-glow adaptive-shadow area-scadenze">
+          <div class="matrix-icon-box"><span class="material-symbols-outlined">calendar_month</span></div>
           <div class="card-text-block">
             <h3>Scadenze</h3>
             <p>Controlla i prossimi impegni</p>
           </div>
         </a>
-        <a href="#" class="matrix-card card-red area-urgenze">
-          <div class="matrix-icon-box">⚠️</div>
+        <a href="#" class="matrix-card card-red border-glow adaptive-shadow area-urgenze">
+          <div class="matrix-icon-box"><span class="material-symbols-outlined">warning</span></div>
           <div class="card-text-block">
             <h3>Urgenze</h3>
             <p>Documenti scaduti o mancanti</p>
